--- a/gramicidin_regression.ipynb
+++ b/gramicidin_regression.ipynb
@@ -664,9 +664,7 @@
     "\n",
     "[SVM](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html), [RandomForest](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html), [CV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.RandomizedSearchCV.html), [MSE](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html)\n",
     "\n",
-    "HW assignments: Weeks 4 and 5\n",
-    "\n",
-    "Text Book: Chapters 2 and 4"
+    "Hands-on Machine Learning with Scikit-Learn, Keras, and TensorFlow: Concepts, Tools and Techniques to Build Intelligent Systems by Aurelien Geron: Chapters 2 and 4"
    ]
   }
  ],
